$Id$

2016-03-26  Christian Franke  <franke@computer.org>

	dev_legacy.cpp, utility.cpp, utility.h:
	Remove FreeNonZero(), use free() instead.

	smartctl.cpp, smartd.cpp, utility.cpp, utility.h:
	Remove split_report_arg(), use sscanf() instead.

	Add basic NVMe support for smartd (-H -l error -W):
	Makefile.am, os_win32/vc10/smartd.vcxproj: Add nvmecmds.cpp to smartd.
	smartd.cpp: Add NVMeDeviceScan() and NVMeCheckDevice().
	smartd.8.in, smartd.conf.5.in: Document NVMe support.

	nvmeprint.cpp: Remove ary_to_str().
	utility.cpp, utility.h: Add format_char_array().

2016-03-24  Christian Franke  <franke@computer.org>

	dev_interface.cpp: Add missing 'usbprolific' to help text.

	nvmecmds.cpp, nvmeprint.cpp: Add support for '-q noserial'.

	smartd.cpp: Remove outdated declaration of getdomainname().

	utility.cpp: Add C++ language version to output of -V option.

2016-03-20  Christian Franke  <franke@computer.org>

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp, nvmeprint.h, smartctl.cpp:
	Add options '-l error[,NUM]' and '-l nvmelog,PAGE,SIZE' for NVMe
	devices.
	scsicmds.cpp: dStrHex(): Don't print trailing spaces.
	smartctl.8.in: Document '-l error[,NUM]', '-l nvmelog,PAGE,SIZE'
	and '-r nvmeioctl'.

2016-03-18  Christian Franke  <franke@computer.org>

	Add basic NVMe support for smartctl (-i -H -A) on Linux:
	Makefile.am: Add new files.
	dev_interface.cpp, dev_interface.h: Add class nvme_device.
	linux_nvme_ioctl.h: New file imported from Linux kernel sources
	(include/uapi/linux/nvme_ioctl.h 9d99a8d 2015-10-09).
	nvmecmds.cpp, nvmecmds.h: New module with NVMe command wrapper
	functions for smartctl and smartd.
	nvmeprint.cpp, nvmeprint.h: New module with nvmePrintMain().
	smartctl.cpp: Add nvmePrintMain() support.
	os_linux.cpp: Add class linux_nvme_device.
	os_win32/vc10/smart*.vcxproj*: Add new files.
	smartctl.8.in: Document NVMe support.

2016-03-14  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: work on LB provisioning corner cases; LBPRZ now