@@ -2,6 +2,9 @@ $Id$
 
 2016-03-26  Christian Franke  <franke@computer.org>
 
+	os_solaris.cpp, utility.cpp, utility.h:
+	Remove CustomStrDup(), use strdup() instead.
+
 	dev_legacy.cpp, utility.cpp, utility.h:
 	Remove FreeNonZero(), use free() instead.
 
